--- a/src/main/resources/co/edu/poli/aplicacion/vista/formulario.fxml
+++ b/src/main/resources/co/edu/poli/aplicacion/vista/formulario.fxml
@@ -49,9 +49,9 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
-                  <Button fx:id="barbolespgeo" layoutX="23.0" layoutY="383.0" mnemonicParsing="false" onAction="#clickcambiarventana" prefHeight="61.0" prefWidth="207.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ARBOL ESP GEO " textFill="#0f385a">
+                  <Button fx:id="barbolespgeo" layoutX="31.0" layoutY="383.0" mnemonicParsing="false" onAction="#clickcambiarventana" prefHeight="51.0" prefWidth="193.0" style="-fx-background-color: #2589DA; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ARBOL ESP GEO " textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="20.0" />
+                        <Font name="System Bold" size="21.0" />
                      </font>
                   </Button>
                </children>
@@ -109,7 +109,7 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="tablaDatos" layoutX="22.0" layoutY="249.0" prefHeight="282.0" prefWidth="688.0">
+                  <TableView fx:id="tablaDatos" layoutX="22.0" layoutY="249.0" prefHeight="273.0" prefWidth="688.0">
                     <columns>
                       <TableColumn fx:id="tablaId" prefWidth="75.19995498657227" text="ID" />
                         <TableColumn fx:id="tablaFechExp" prefWidth="99.46664428710938" text="FECH EXP" />
@@ -119,9 +119,9 @@
                         <TableColumn fx:id="tablaDescr" prefWidth="208.53326416015625" text="DESCRIPCION" />
                     </columns>
                   </TableView>
-                  <Button fx:id="bmostrartodo" layoutX="530.0" layoutY="193.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="39.0" prefWidth="142.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="MOSTRAR TODO" textFill="#0f385a">
+                  <Button fx:id="bmostrartodo" layoutX="559.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="39.0" prefWidth="142.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="MOSTRAR TODO" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="15.0" />
+                        <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
                </children>
