--- a/src/main/resources/co/edu/poli/aplicacion/vista/formulario.fxml
+++ b/src/main/resources/co/edu/poli/aplicacion/vista/formulario.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -109,7 +110,7 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="tablaDatos" layoutX="22.0" layoutY="260.0" prefHeight="296.0" prefWidth="688.0">
+                  <TableView fx:id="tablaDatos" layoutX="22.0" layoutY="305.0" prefHeight="251.0" prefWidth="688.0">
                     <columns>
                       <TableColumn fx:id="tablaId" prefWidth="75.19995498657227" text="ID" />
                         <TableColumn fx:id="tablaFechExp" prefWidth="99.46664428710938" text="FECH EXP" />
@@ -122,6 +123,19 @@
                   <Button fx:id="bmostrartodo" layoutX="559.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="39.0" prefWidth="142.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="MOSTRAR TODO" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+                  <CheckBox layoutX="35.0" layoutY="212.0" mnemonicParsing="false" text="Cansilleria " />
+                  <CheckBox layoutX="35.0" layoutY="242.0" mnemonicParsing="false" text="Policia" />
+                  <CheckBox layoutX="35.0" layoutY="269.0" mnemonicParsing="false" text="Migración Colombia" />
+                  <Button fx:id="bmostrartodo1" layoutX="214.0" layoutY="215.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Suscribir" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="bmostrartodo11" layoutX="214.0" layoutY="254.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Desuscribir" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
                </children>
