--- a/src/main/resources/co/edu/poli/aplicacion/vista/formulario.fxml
+++ b/src/main/resources/co/edu/poli/aplicacion/vista/formulario.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -110,7 +111,7 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="tablaDatos" layoutX="22.0" layoutY="305.0" prefHeight="251.0" prefWidth="688.0">
+                  <TableView fx:id="tablaDatos" layoutX="22.0" layoutY="332.0" prefHeight="224.0" prefWidth="688.0">
                     <columns>
                       <TableColumn fx:id="tablaId" prefWidth="75.19995498657227" text="ID" />
                         <TableColumn fx:id="tablaFechExp" prefWidth="99.46664428710938" text="FECH EXP" />
@@ -120,24 +121,38 @@
                         <TableColumn fx:id="tablaDescr" prefWidth="208.53326416015625" text="DESCRIPCION" />
                     </columns>
                   </TableView>
-                  <Button fx:id="bmostrartodo" layoutX="559.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="39.0" prefWidth="142.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="MOSTRAR TODO" textFill="WHITE">
+                  <Button fx:id="bmostrartodo" layoutX="509.0" layoutY="235.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="39.0" prefWidth="142.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="MOSTRAR TODO" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
-                  <CheckBox layoutX="35.0" layoutY="212.0" mnemonicParsing="false" text="Cansilleria " />
-                  <CheckBox layoutX="35.0" layoutY="242.0" mnemonicParsing="false" text="Policia" />
-                  <CheckBox layoutX="35.0" layoutY="269.0" mnemonicParsing="false" text="Migración Colombia" />
-                  <Button fx:id="bmostrartodo1" layoutX="214.0" layoutY="215.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Suscribir" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="bmostrartodo11" layoutX="214.0" layoutY="254.0" mnemonicParsing="false" onAction="#clickMostrarTodo" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Desuscribir" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                  </Button>
+                  <Pane layoutX="31.0" layoutY="189.0" prefHeight="132.0" prefWidth="278.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
+                     <children>
+                        <Button fx:id="btnsuscribir" layoutX="169.0" layoutY="15.0" mnemonicParsing="false" onAction="#clickSuscribir" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Suscribir" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btneliminarsusc" layoutX="169.0" layoutY="53.0" mnemonicParsing="false" onAction="#clickEliminarSuscripcion" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Eliminar" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                        <CheckBox fx:id="selectCansilleria" layoutX="18.0" layoutY="36.0" mnemonicParsing="false" text="Cancilleria " />
+                        <CheckBox fx:id="selectpolicia" layoutX="18.0" layoutY="66.0" mnemonicParsing="false" text="Policia" />
+                        <CheckBox fx:id="selectmigra" layoutX="18.0" layoutY="93.0" mnemonicParsing="false" text="Migración Colombia" />
+                        <Label layoutX="18.0" layoutY="7.0" prefHeight="22.0" prefWidth="116.0" text="Notificación" textFill="#0f385a">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="btnverlista" layoutX="169.0" layoutY="88.0" mnemonicParsing="false" onAction="#clickverlistasuscriptores" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Lista" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </Pane>
                </children>
             </AnchorPane>
          </children>
