--- a/src/main/resources/co/edu/poli/aplicacion/vista/formulario2.fxml
+++ b/src/main/resources/co/edu/poli/aplicacion/vista/formulario2.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="989.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.poli.aplicacion.controlador.controladorFormulario">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="779.0" prefWidth="1056.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.poli.aplicacion.controlador.controladorFormulario">
    <left>
       <VBox prefHeight="679.0" prefWidth="251.0" style="-fx-background-color: #E0E0E0;" BorderPane.alignment="CENTER">
          <children>
@@ -28,7 +28,7 @@
                   </ImageView>
                </children>
             </VBox>
-            <AnchorPane prefHeight="528.0" prefWidth="251.0" style="-fx-background-color: #0F385A;">
+            <AnchorPane prefHeight="563.0" prefWidth="251.0" style="-fx-background-color: #0F385A;">
                <children>
                   <Button fx:id="bguardar" layoutX="38.0" layoutY="39.0" mnemonicParsing="false" onAction="#clickGuardar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="GUARDAR" textFill="#0f385a">
                      <font>
@@ -61,7 +61,7 @@
       </VBox>
    </left>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="755.0" prefWidth="844.0" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER" prefHeight="105.0" prefWidth="738.0" style="-fx-background-color: #FFFFFF;">
                <children>
@@ -72,45 +72,46 @@
                   </Label>
                </children>
             </HBox>
-            <AnchorPane prefHeight="574.0" prefWidth="738.0" style="-fx-background-color: #DDE7F0;">
+            <AnchorPane prefHeight="677.0" prefWidth="805.0" style="-fx-background-color: #DDE7F0;">
                <children>
-                  <TextField fx:id="idPasaporte" layoutX="14.0" layoutY="53.0" onAction="#filtrarId" prefHeight="36.0" prefWidth="119.0" />
-                  <TextField fx:id="titular" layoutX="143.0" layoutY="53.0" prefHeight="36.0" prefWidth="179.0" />
-                  <TextField fx:id="fechExp" layoutX="332.0" layoutY="53.0" prefHeight="36.0" prefWidth="204.0" />
-                  <TextField fx:id="pais" layoutX="547.0" layoutY="53.0" prefHeight="36.0" prefWidth="171.0" />
-                  <Label layoutX="22.0" layoutY="21.0" text="ID Pasaporte" textFill="#0f385a">
+                  <TextField fx:id="idPasaporte" layoutX="14.0" layoutY="53.0" onAction="#filtrarId" prefHeight="36.0" prefWidth="218.0" />
+                  <TextField fx:id="fechExp" layoutX="260.0" layoutY="53.0" prefHeight="36.0" prefWidth="233.0" />
+                  <TextField fx:id="pais" layoutX="521.0" layoutY="51.0" prefHeight="36.0" prefWidth="254.0" />
+                  <TextField fx:id="DocTitular" layoutX="14.0" layoutY="151.0" prefHeight="36.0" prefWidth="222.0" />
+                  <TextField fx:id="titular" layoutX="255.0" layoutY="151.0" prefHeight="36.0" prefWidth="238.0" />
+                  <ComboBox fx:id="tipoPas" layoutX="638.0" layoutY="93.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="142.0" promptText="(Seleccione una opción)" style="-fx-text-fill: #0f3805;" />
+                  <TextField fx:id="descr" layoutX="519.0" layoutY="152.0" prefHeight="34.0" prefWidth="254.0" />
+                  <Label layoutX="78.0" layoutY="25.0" text="ID Pasaporte" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="208.0" layoutY="21.0" text="Titular" textFill="#0f385a">
+                  <Label layoutX="58.0" layoutY="123.0" text="Documento Titular" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="364.0" layoutY="21.0" text="Fecha De Expedición" textFill="#0f385a">
+                  <Label layoutX="304.0" layoutY="25.0" text="Fecha De Expedición" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="622.0" layoutY="21.0" text="Pais" textFill="#0f385a">
+                  <Label layoutX="629.0" layoutY="25.0" text="Pais" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="22.0" layoutY="111.0" text="Tipo De Pasaporte" textFill="#0f385a">
+                  <Label layoutX="520.0" layoutY="96.0" text="Tipo De Pasaporte" textFill="#0f385a">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="519.0" layoutY="123.0" text="Descripción" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="tipoPas" layoutX="14.0" layoutY="142.0" prefHeight="33.0" prefWidth="192.0" promptText="(Seleccione una opción)" style="-fx-text-fill: #0f3805;" />
-                  <TextField fx:id="descr" layoutX="244.0" layoutY="142.0" prefHeight="34.0" prefWidth="477.0" />
-                  <Label layoutX="255.0" layoutY="111.0" text="Descripción" textFill="#0f385a">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <Pane layoutX="31.0" layoutY="189.0" prefHeight="132.0" prefWidth="278.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
+                  <Pane layoutX="45.0" layoutY="227.0" prefHeight="132.0" prefWidth="278.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
                      <children>
                         <Button fx:id="btnsuscribir" layoutX="169.0" layoutY="15.0" mnemonicParsing="false" onAction="#clickSuscribir" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Suscribir" textFill="WHITE">
                            <font>
@@ -122,7 +123,7 @@
                               <Font name="System Bold" size="13.0" />
                            </font>
                         </Button>
-                        <CheckBox fx:id="selectCansilleria" layoutX="18.0" layoutY="36.0" mnemonicParsing="false" text="Cancilleria " />
+                        <CheckBox fx:id="selectCancilleria" layoutX="18.0" layoutY="36.0" mnemonicParsing="false" text="Cancilleria " />
                         <CheckBox fx:id="selectpolicia" layoutX="18.0" layoutY="66.0" mnemonicParsing="false" text="Policia" />
                         <CheckBox fx:id="selectmigra" layoutX="18.0" layoutY="93.0" mnemonicParsing="false" text="Migración Colombia" />
                         <Label layoutX="18.0" layoutY="7.0" prefHeight="22.0" prefWidth="116.0" text="Notificación" textFill="#0f385a">
@@ -137,18 +138,23 @@
                         </Button>
                      </children>
                   </Pane>
-                  <ComboBox fx:id="estados" layoutX="370.0" layoutY="223.0" prefHeight="26.0" prefWidth="210.0" />
-                  <Label layoutX="369.0" layoutY="192.0" text="Estados" textFill="#0f385a">
+                  <ComboBox fx:id="estados" layoutX="363.0" layoutY="265.0" prefHeight="33.0" prefWidth="146.0" />
+                  <Label layoutX="363.0" layoutY="227.0" text="Estados" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="textAreaMementos" editable="false" layoutX="31.0" layoutY="328.0" prefHeight="234.0" prefWidth="670.0" />
-                  <Button fx:id="btnRestaurar1" layoutX="536.0" layoutY="268.0" mnemonicParsing="false" onAction="#clickRestaurar" prefHeight="41.0" prefWidth="142.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Restaurar" textFill="WHITE">
+                  <TextArea fx:id="textAreaMementos" editable="false" layoutX="45.0" layoutY="378.0" prefHeight="264.0" prefWidth="694.0" />
+                  <Button fx:id="btnRestaurar1" layoutX="565.0" layoutY="263.0" maxHeight="-Infinity" mnemonicParsing="false" onAction="#clickRestaurar" prefHeight="37.0" prefWidth="127.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Restaurar" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="19.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
+                  <Label layoutX="322.0" layoutY="123.0" text="Nombre Titular" textFill="#0f385a">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </children>
